/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.apache.bigtop.manager.grpc.generated";
option java_outer_classname = "HostInfoProto";

service HostInfoService {
  rpc GetHostInfo (HostInfoRequest) returns (HostInfoReply) {}
}

message HostInfoRequest {
}

message HostInfoReply {
  string hostname = 1;
  string ipv4 = 2;
  string ipv6 = 3;
  string os = 4;
  string version = 5;
  string arch = 6;
  string cpuLoad = 7;
  int32 availableProcessors = 8;
  string processCpuLoad = 9;
  int64 processCpuTime = 10;
  int64 totalMemorySize = 11;
  int64 freeMemorySize = 12;
  int64 totalSwapSpaceSize = 13;
  int64 freeSwapSpaceSize = 14;
  int64 committedVirtualMemorySize = 15;
  string systemLoadAverage = 16;
  int64 freeDisk = 17;
  int64 totalDisk = 18;
}